# snailshell

./: Cargo.toml  LICENSE  README.md  readme.md
examples/: colored_text.rs  fun_stuff.rs  simple.rs
src/: lib.rs
