[package]
name = "snailshell"
version = "0.1.1"
edition = "2021"
description = "Library for making terminal text display with pleasant RPG-style animations."
license = "MIT"
homepage = "https://github.com/ElfWitch/snailshell"
repository = "https://github.com/ElfWitch/snailshell"
keywords = ["terminal", "animated", "cli", "rpg", "text"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = ["demos/*"]

[[bin]]
name = "snailshell"
path = "src/bin/snailshell.rs"

[dependencies]
clap = {version="3.2.15", features=["derive"]}