[package]
name = "snailshell"
version = "0.3.0"
edition = "2021"
description = "Library for making terminal text display with pleasant RPG-style animations."
license = "MIT"
homepage = "https://github.com/ElfWitch/snailshell"
repository = "https://github.com/ElfWitch/snailshell"
keywords = ["terminal", "animation", "cli", "rpg", "text"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = ["demos/*"]

[[bin]]
name = "snailshell"
path = "src/bin/snailshell.rs"

[dependencies]
clap = {version="3.2.15", features=["derive"]}
once_cell = "1.13.0"
unicode-segmentation = "1.9.0"

[dev-dependencies]
crossterm = "0.24.0"